tests/NormalTests/paczka1/small_fuzzy/73035258.err
Error in line 3: VP5bi S60 86,25
Error in line 12: 64H7s6qGTFq S60 58,7
Error in line 15: 64H7s6qGTFq S371 31,3
